--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     ]
   },
   "dependencies": {
+    "ajv": "^7.2.3",
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
     "faker": "^5.5.2"
