--- a/package.json
+++ b/package.json
@@ -100,9 +100,12 @@
     ]
   },
   "dependencies": {
-    "ajv": "^7.2.3",
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
-    "faker": "^5.5.2"
+    "joi": "^17.4.0",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.3",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.6.2"
   }
 }
