--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/faker": "^5.1.7",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
+    "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.16.0",
     "@typescript-eslint/parser": "^4.16.0",
     "cz-conventional-changelog": "^3.3.0",
